tests/invalid/call_expr.ri
fn main() void {
    zet(white, simple, clear);
    xx("", 5, name: 5, fallout: true);

    qy(first: 5, last: 10, 9); // FAIL
}
